avancées modularité, remaniement chapitres som et algo

--- a/01-Modularite/Modularite.tex
+++ b/01-Modularite/Modularite.tex
@@ -11,11 +11,18 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-Question du chapitre : pourquoi est ce intéressant d'explorer les réseaux de neurones d'un point de vue des systèmes complexes et modulaires ? 
+Question et raisonnement du chapitre ( a placer dans les différentes sections ) 
+
+Un système complexe est un système dans lequel de nombreux composant interagissent de façon non-linéaire, avec des rétro-actions. De ce fait, il est difficile d'appréhender et de comprendre un tel système sans le simuler. Ces systèmes présentent notamment des propriétés d'auto-organisation.
+Nous chercherons dans cette thèse à construire un réseau de neurone en en assemblant des plus simples avec rétroaction. 
+Pourquoi est ce intéressant d'explorer les réseaux de neurones d'un point de vue des systèmes complexes et modulaires ? 
+Qu'est ce qu'on appelle modularité ? 
+Quelles pistes ont déjà été explorées à ce sujet ? 
+
+
 
 
 \section{Contexte}
-
 
 L'idée de ce chapitre est d'inscrire nos travaux dans le coté modulaire des réseaux de neurones. Il nous foudra donc définir proprement ce qu'on appelle modularité, et définir les motivations pour créer une architecture modulaire. Il faut def ce qu'on appelle réseau de neurones et apprentissage automatique. 
 
@@ -72,7 +79,7 @@ Définir un système complexe :
 \subsection{Auto-organisation et emergence}
 
 Développer ici ce qu'on appelle "auto-organisation", dans quel contexte c'est observé, des structures sociales aux dépliement de protéines. 
-"Allisme": le tout est plus que la somme des parties
+"Holisme": le tout est plus que la somme des parties
 
 → Auto-organisation definition
 
@@ -292,7 +299,7 @@ slow intermodular processes, fast intramodular : la modularité spatiale a l'ori
 Opaque vs tout savoir
 
 
-\subsection{Modularité émergente ou modularité définie}
+\subsection{Modularité comme propriété émergente ou modularité définie}
 
 On a défini un réseau modulaire en analysant sa structure ou sa fonction une fois créé. Néanmoins, la façon dont ce réseau a été élaboré peut résulter de plusieurs processus : l'aspect modulaire peut émerger d'une sélection, d'une construction ou d'un recablage des arêtes et des noeuds du graphe; ou alors la modularité peut être définie a priori par la structure du réseau. Cette distinction est nécessaire lorsqu'on cherche à créer des réseaux de neurones pour l'apprentissage, qui sont alors des systèmes qui s'adaptent. La structure peut donc être présente a priori et l'apprentissage uniquement créé par l'adaption de poids au sein du réseau, ou l'apprentissage passe également par l'adaptation des arêtes.
 Au sein même des réseaux dont la structure est définie a priori, la \emph{fonction} de chaque module peut être définie ou non. Dans l'exemple le plus "prédéfini", le réseau d'interaction est défini en liant des modules ayant des fonctions bien précises. C'est le cas par exemple de l'organisation structurelle d'une entreprise, chaque agent ayant un role défini au sein d'une hiérarchie. Ce sont ce genre de modules prédéfinis qui ont été utilisés lors des débuts de la recherche en intelligence artificielle, dans les systèmes experts. Même si ces systèmes ne font pas d'\emph{apprentissage}, un comportement global émerge de l'interaction entre modules. Par exemple, Brooks \cite{brooks_sumsumption_85} propose une architecture en robotique appelée sumsumption, dans laquelle les comportements "intelligents" et haut niveau d'un robot ( "explorer", "planifier") émergent de la combinaison d'actions et de capteurs "bas niveau" comme "tourne", "avance", "faire demi-tour", "detection" (figure~\ref{fig:brooks}).
@@ -307,6 +314,9 @@ Au sein même des réseaux dont la structure est définie a priori, la \emph{fon
 Ces réseaux experts précablés ne font pas d'apprentissage. Une main ingénieure doit trouver les bons paramètres, les bonnes connexions, et les bonnes fonctions faisant émerger les comportement voulus. A l'ère de l'apprentissage, on peut remplacer ces modules dont la fonction est prédéfinie par des modules qui apprennent leur fonction. Ils sont alors connectés selon un réseau fixe, mais apprendront au sein de ce réseau leur fonction. 
 
 Enfin, certains réseaux de neurones, bio-inspirés, renforcent une connexion lorsque deux neurones s'activent en même temps. C'est la règle de Hebb "neurones that fire together, wire together". Depuis un bouillon de neurones initial, l'état final du système présente une structure de réseau apprise.  -> Citer des exemples de réseaux qui adaptent des connexions. 
+
+
+Attention : même avec une modularité prédéfinie, on reste un système complexe, donc on pourra avoir des propriétés d'adaptation émergentes.
  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SECTION 4 En pratique, ou en est on des réseaux de neurones modulaires ?
