--- a/biblio_modularite.bib
+++ b/biblio_modularite.bib
@@ -46,6 +46,19 @@
           367-75
         }
 }
+
+@article{complex_adaptative_systemes,
+ ISSN = {00115266},
+ author = {John H. Holland},
+ journal = {Daedalus},
+ number = {1},
+ pages = {17--30},
+ publisher = {The MIT Press},
+ title = {Complex Adaptive Systems},
+ volume = {121},
+ year = {1992}
+}
+
 %Inspiration biologique
 
 @article{primate_cortex_91,
