--- a/02-SOM/SOM.tex
+++ b/02-SOM/SOM.tex
@@ -1,6 +1,19 @@
 \chapter{Cartes de Kohonen et modèle d'architecture CxSOM}
 \graphicspath{{02-SOM/}}
 
+
+Idée du chapitre : 
+
+"Qu'est ce qu'on veut faire avec des cartes de Kohonen ?" 
+" A quoi servent les cartes de Kohonen ?" ok on les utilise pour de la visualisation, de la réduction de dimension. La visualisation est bien pour un observateur humain, la réduction de dimension peut impliquer qu'on va utiliser un algorithme derrière. Mais les cartes de Kohonen vont plus loin dans l'apprentissage: on a une approximation de l'espace d'entrée par un graphe. Cela veut dire qu'une entrée est associée à un prototype dans la carte, mais inversement : un prototype est associé à un ensemble d'entrée continu ou contigu.
+Une entrée est alors représentée par notamment sa position dans la carte : un nombre donc, ou une paire. 
+Il est possible de faire du calcul sur ces positions au sein d'algoithmes. 
+
+Dans cette thèse, on a pensé à utiliser cette propriété pour construire un réseau de cartes auto-organisatrices. Par ce réseau, on peut exploiter les positions pour générer des dynamiques au sein de la carte qui permettront une prise de décision, ou des représentation de donnée différentes. 
+
+
+
+
 // Kohonen : il faut surprendre encore ! Par quel 
 bout le prendre ? 
 → Appuyer sur les cartes 1D
