--- a/main.tex
+++ b/main.tex
@@ -49,6 +49,7 @@
 \mainmatter
 \input{01-Modularite/Modularite}
 \input{02-SOM/SOM}
+\input{03-Representation/Representation}
 \input{03-Algorithme/Algorithme}
 \input{04-Analyse/Analyse}
 \input{Conclusion}
