--- a/03-Algorithme/Algorithme.tex
+++ b/03-Algorithme/Algorithme.tex
@@ -1,60 +1,18 @@
 \chapter{Analyse de l'architecture modulaire, champs d'application}
 
-Pb : mettre application avant ? on décrit l'algorithme sans vraiment savoir ou on veut aller avec. Ou alors, se dire qu'on a un algo, motivé par le fait qu'insérer des rétroactions dans des systèmes peut induire l'émergence d'un comportement apprenant, et on va ici se poser les questions de "comment le comprendre" 
-
 \graphicspath{{03-Algorithme/}}
 
-%\subsubsection{Récapitulatif}
+Avant de pouvoir étudier une architecture de cartes, il est nécessaire de se pencher sur les outils de visualisation de ces cartes, ainsi que sur les indicateurs qu'on peut étudier pour qualifier les comportement. 
+Il faut noter qu'une carte de Kohonen, malgré son fonctionnement apparemment simple, se montre compliquée lorsqu'il s'agit de l'étudier mathématiquement. On peut donc seulement citer les études proposées par (Cottrell, 2003) a propos de la convergence d'une carte 1D. Les auteurs se posent les questions suivantes: 
+\begin{itemize}
+\item Est ce que la carte converge ? 
+\item Comment savoir si une représentation apportée par la carte est pertinente ?  
+\end{itemize}
 
-%\begin{algorithm}
-%  \DontPrintSemicolon 
-%  \SetKwComment{Comment}{}{}
-%  \caption{Learning iteration with relaxation process}\label{algo:cxsom}
-%  \KwInput{$\inpx\m{1}, ... , \inpx\m{K} \leftarrow (o^1, \cdots , o^K)\in \mathcal{D}^1 \times \cdot \times \mathcal{D}^K$}
-%   $t \leftarrow 0$ \;
-%   $\forall i , \bmu\m{i} \leftarrow \argmax_p a\ext(\inpx\m{i},p)$\;
-%  \While {$\mathbf{\bmu}(t) \neq \mathbf{ \bmu}(t-1)$}{
-%  \ForAll{Map $i$}{
-%  $\inpc\m{i}_1,...\inpc\m{i}_k \leftarrow$ BMUs from connected maps \;
-%  Computation of $a_g^i$ (equation~\ref{activity}) \;
-%  $p\star\m{i} \leftarrow \argmax_p a_g^i(p)$ \;
-%  $\bmu\m{i} \leftarrow \bmu\m{i} + min(\Delta, \lvert p\star\m{i} - \bmu\m{i} \rvert) \times \sign(p\star\m{i} - \bmu\m{i})$ \;
-%  }
-%  $t \leftarrow t+1$ \;
-%  }
-%  $\forall i, \w\ext\m{i}(p) \leftarrow \w\ext\m{i}(p) + H\ext(\bmu\m{i}, p)(\w\ext\m{i}(p) - \inpx\m{i})$\;
-%  $\forall i, \forall k, \w_{ck}\m{i}(p) \leftarrow \w_{ck}\m{i}(p) + H\cont(\bmu\m{i},p)(\w_{ck}\m{i}(p) - \inpc\m{i})$
-%\end{algorithm}
+Dans le cas d'une carte 1D, on cherche ces réponses mathématiquement mais les représentation usuelle des cartes permet une intuition du résulat : on a de fortes chances d'avoir juste en supposant que la carte converge. Quant à la représentation, on peut proposer des interprétation visuelles : si la carte couvre toutes les données, si elle est "bien dépliée" à l'oeil, l'apprentissage semble pertinent.
 
+Dans le cas de l'architecture CxSOM, on se trouve dans une situation épineuse : même la visualisation des poids ne permet pas de conclure et savoir si on a bien représenté les entrées. 
 
-
-
-\section{Choix des paramètres}
-
-\subsection{Influence des rayons de voisinage}
-
-\subsection{Influence des autres paramètres}
-
-\subsection{Compatibilité en 2D}
-
-\section{Analyse de la relaxation}
-
-L'apprentissage conjoint des cartes repose sur la relaxation au sein d'une itération. On cherche donc à vérifier si la relaxation converge vers une valeur quelle que soit l'entrée, et si elle est pertinente en large dimension avec de nombreuses cartes.
-
-\subsection{Analyse expérimentale}
-
-\subsection{Champs de BMU}
-
-\subsection{Limitations et possibilités en grande dimension}
-
-\section{Implémentation}
-
-L'implémentation des expériences a été réalisée via l'environnement CxSOM \cite{cxsom}.
-
-\section{Perspectives d'évolutions}
-
-
-Avant de présenter les performances d'un algorithme, il s'agit de définir plus précisément ce qu'on attend de ce système et comment le représenter. L'architecture CxSOM se présente comme une construction qui répond à un questionnement structurel des réseaux de neurones. Mais au juste, qu'attend t-on de ce réseau de neurones ? De la prédiction, de l'organisation ? Les cartes de Kohonen sont habituellement utilisées dans un objectif de clustering, ou associées à d'autres algorithmes de prédiction utilisant leurs propriétés structurelles. En étude préliminaire pour CxSOM, il s'agit de comprendre le comportement de l'architecture de cartes.
 
 \section{Cas d'utilisation : les entrées multimodales}
 
@@ -120,3 +78,34 @@ L'évolution de l'indicateur au cours de l'apprentissage est donnée en figure \
 \section{Représenter une carte au sein d'une architecture}
 
 Représentation des poids, des entrées, des BMU - analyse
+
+
+
+
+\section{Choix des paramètres}
+
+\subsection{Influence des rayons de voisinage}
+
+\subsection{Influence des autres paramètres}
+
+\subsection{Compatibilité en 2D}
+
+\section{Analyse de la relaxation}
+
+L'apprentissage conjoint des cartes repose sur la relaxation au sein d'une itération. On cherche donc à vérifier si la relaxation converge vers une valeur quelle que soit l'entrée, et si elle est pertinente en large dimension avec de nombreuses cartes.
+
+\subsection{Analyse expérimentale}
+
+\subsection{Champs de BMU}
+
+\subsection{Limitations et possibilités en grande dimension}
+
+\section{Implémentation}
+
+L'implémentation des expériences a été réalisée via l'environnement CxSOM \cite{cxsom}.
+
+\section{Perspectives d'évolutions}
+
+
+Avant de présenter les performances d'un algorithme, il s'agit de définir plus précisément ce qu'on attend de ce système et comment le représenter. L'architecture CxSOM se présente comme une construction qui répond à un questionnement structurel des réseaux de neurones. Mais au juste, qu'attend t-on de ce réseau de neurones ? De la prédiction, de l'organisation ? Les cartes de Kohonen sont habituellement utilisées dans un objectif de clustering, ou associées à d'autres algorithmes de prédiction utilisant leurs propriétés structurelles. En étude préliminaire pour CxSOM, il s'agit de comprendre le comportement de l'architecture de cartes.
+
