--- a/main.tex
+++ b/main.tex
@@ -28,6 +28,7 @@
 \usepackage{graphicx}
 \usepackage[absolute]{textpos} 
 \usepackage{colortbl}
+\usepackage{amsthm}
 \usepackage{array}
 \usepackage{url}
 \usepackage{algorithm2e}
@@ -36,7 +37,7 @@
 \SetKwInput{KwOutput}{Output}
 \usepackage{mathtools}
 \DeclareMathOperator{\sign}{sgn}
-
+\newtheorem{propriete}{Propriété}
 
 %def path for files
 \input{Notations.tex}
